# jam

./: .gitignore  Dockerfile  ReadMe.md  TODO.md  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.service  run.bat  run.sh
.github/workflows/: build-deploy.yml  test.yml
alembic/: env.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: aggregator.py  auth.py  company.py  job.py  location.py  person.py  post.py  user.py  utils.py  vote.py
backend/: pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
backend/app/eis/: eis_models.py  email_parser.py  email_scraper.py  emails.py  job_scraper.py  location_parser.py  models.py  routers.py  scheduler.py  schemas.py
backend/app/routers/: __init__.py  aggregator.py  auth.py  company.py  dashboard.py  data_tables.py  export.py  job.py  location.py  person.py  settings.py  tables.py  user.py  utils.py
backend/test/: conftest.py  create_data.py  data.py  files.py  generate_test_data.py  seed_database.py  table_data.py  test_tables.py  test_user.py
backend/test/utils/: create_data.py  files.py  table_data.py
backend/tests/: conftest.py  test_routers.py  test_user.py
backend/tests/eis/: test_email_scraper.py  test_job_scraper.py  test_location_parser.py  test_routers.py
backend/tests/resources/: Cover Letter.docx  Cover Letter.txt  indeed_email.txt  linkedin_email.txt
backend/tests/routers/: test_dashboard.py  test_data_tables.py  test_export.py  test_login.py  test_settings.py  test_user.py
backend/tests/utils/: add_test_user.py  create_data.py  files.py  seed_database.py  table_data.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/frontend_tests/: conftest.py  keywords_page.py  react_select.py  simple_test.py
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  App.tsx  Header.js  Logo.css  Sidebar.css  Sidebar.js  Themes.css  declaration.d.ts  sidebar.css  sidebar.js
frontend/src/components/: AlertModal.js  ConfirmationModal.js  FormFieldRender.js  GenericFormModal.css  GenericFormModal.js  GenericModal.css  GenericModal.js  GenericTable.js  GenericViewModal.js  Header.js  LocationMap.js  Logo.css  Renders.js  StyleToggle.js  Table.js  ViewRenders.js  formFieldRender.js  managers.js  useConfirmation.js
frontend/src/contexts/: AuthContext.js  AuthContext.tsx  LoadingContext.js  LoadingContext.tsx
frontend/src/hooks/: CountryUtils.js  GeoCoding.js  UseAlert.js  useGenericAlert.js  useGenericAlert.ts  useModalState.js  useModalState.ts  useNotificationToast.js  useNotificationToast.ts
frontend/src/pages/: AboutPage.css  AboutPage.tsx  AggregatorsPage.js  AggregatorsPage.jsx  AggregatorsPage.tsx  AppSettingsPage.tsx  ComapniesPage.js  CompaniesPage.js  CompaniesPage.jsx  CompaniesPage.tsx  CompanyFormModal.js  CompanyViewModal.js  DashboardPage.css  DashboardPage.js  EISDashboardPage.js  EISDashboardPage.jsx  InterviewsPage.js  InterviewsPage.jsx  JobsPage.css  (+31 more)
frontend/tests/: conftest.py  keywords_page.py  react_select.py  simple_test.py  test_auth.py  test_page.py  test_table_page.py  test_user_settings.py
reports/coverage/: coverage.xml
reports/tests/: report.html  tests.xml
test/: conftest.py  test_aggregator.py  test_company.py  test_job.py  test_location.py  test_locations.py  test_person.py  test_post.py  test_user.py  test_utils.py  test_vote.py
(+247 files in other folders)
