[project]
name = "jam"
version = "1.0.0"
description = "Job Application Manager"
authors = [
    { name = "Emmanuel V. Péan", email = "emmanuel.pean@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "fastapi[all]==0.116.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.43",
    "httpx==0.28.1",
    "pydantic-settings==2.10.1",
    "psycopg2-binary",
    "pydantic[email]==2.11.7",
    "python-jose==3.5.0",
    "bcrypt==4.3.0",
    "google-api-python-client==2.179.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "cloudscraper==1.2.71",
    "tqdm==4.67.1",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-html==4.1.1",
    "black==25.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/emmanuelpean/jam"

[tool.coverage.run]
data_file = "reports/coverage/.coverage"

[tool.coverage.html]
directory = "reports/coverage/htmlcov"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.setuptools.packages.find]
exclude = ["reports*", "resources*"]
